Fixed the spacing of the 'Create New Patient header' and the navbar

--- a/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
+++ b/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
@@ -28,8 +28,9 @@
     margin: $spacing-05 0 $spacing-05 0;
 }
 
-.fixedPosition {
+.fixedColumn {
     position: fixed;
+    margin-top: 2rem;
 }
 
 $color-gray-70: #525252;
